WAP LAB-1 Add name and unordered list

--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
     <title>Bipin Karki</title>
 </head>
 <body>
-
+    <div class="header">
+        <h1>Bipin Karki</h1>
+        <img src="" />
+        <ul>
+            <li>W1 - HomePage</li>
+            <li>W2 - AboutMe</li>
+        </ul>
+    </div>
 </body>
 </html>
