--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 </head>
 <body>
     <div class="header">
+        <img src="assets/bipin_karki.jpg" height="250" width="200" />
         <h1>Bipin Karki</h1>
-        <img src="" />
         <ul>
             <li>W1 - HomePage</li>
             <li>W2 - AboutMe</li>
