--- a/index.html
+++ b/index.html
@@ -5,15 +5,15 @@
     <title>Bipin Karki</title>
 </head>
 <body>
-<div class="header">
-    <img src="assets/bipin_karki.jpg" height="250" width="200"/>
+<div>
+    <img src="assets/bipin_karki.jpg" alt="bpn" height="250" width="200"/>
     <h1>Bipin Karki</h1>
     <ul>
         <li>W1 - HomePage</li>
         <li>W2 - AboutMe</li>
     </ul>
 </div>
-<div class="footer">
+<div>
     <a href="http://validator.w3.org/check/referer"> <img
             src="http://mumstudents.org/cs472/2014-09/images/w3c-html.png" alt="html validator"/></a>
 
