WAP LAB-1 Add header and footer semantics

--- a/index.html
+++ b/index.html
@@ -5,18 +5,18 @@
     <title>Bipin Karki</title>
 </head>
 <body>
-<div>
+<header>
     <img src="assets/bipin_karki.jpg" alt="bpn" height="250" width="200"/>
     <h1>Bipin Karki</h1>
     <ul>
         <li>W1 - HomePage</li>
         <li>W2 - AboutMe</li>
     </ul>
-</div>
-<div>
+</header>
+<footer>
     <a href="http://validator.w3.org/check/referer"> <img
             src="http://mumstudents.org/cs472/2014-09/images/w3c-html.png" alt="html validator"/></a>
 
-</div>
+</footer>
 </body>
 </html>
