WAP LAB-1 Add html validator

--- a/index.html
+++ b/index.html
@@ -6,15 +6,16 @@
 </head>
 <body>
 <header>
-    <img src="assets/bipin_karki.jpg" alt="bpn" height="250" width="200"/>
+    <img src="images/bipin_karki.jpg" alt="bpn" height="250" width="200"/>
     <h1>Bipin Karki</h1>
     <ul>
+        <li>W1 - This HomePage</li>
         <li>W1 - HomePage</li>
         <li>W2 - AboutMe</li>
     </ul>
 </header>
 <footer>
-    <a href="http://validator.w3.org/check/referer"> <img
+    <a href="https://validator.w3.org/nu/?doc=https://bipin21.github.io"> <img
             src="http://mumstudents.org/cs472/2014-09/images/w3c-html.png" alt="html validator"/></a>
 
 </footer>
