WAP LAB-2 Add about me page

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Bipin Karki</title>
+    <link href="style.css"  rel="stylesheet" />
 </head>
 <body>
 <header>
@@ -15,6 +16,12 @@
     </ul>
 </header>
 <footer>
+    <h4>&copy; Bipin Karki</h4>
+    <p>
+        Maharishi University of Management <br/>
+        1000 N 4th St., Faifield, Iowa, 52557 <br/>
+        Email: bipinkarki172@gmail.com
+    </p>
     <a href="https://validator.w3.org/nu/?doc=https://bipin21.github.io"> <img
             src="http://mumstudents.org/cs472/2014-09/images/w3c-html.png" alt="html validator"/></a>
 
