WAP LAB-2 Add aboutme link on index

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <img src="images/bipin_karki.jpg" alt="bpn" height="250" width="200"/>
     <h1>Bipin Karki</h1>
     <ul>
-        <li>W1 - This HomePage</li>
-        <li>W1 - HomePage</li>
+        <li>W1L1 - This HomePage</li>
+        <li><a href="aboutme.html">W1L2 - About Me</a></li>
         <li>W2 - AboutMe</li>
     </ul>
 </header>
