WAP LAB-2 Add home page lin

--- a/aboutme.html
+++ b/aboutme.html
@@ -7,6 +7,10 @@
 </head>
 <body>
 <header>
+    <nav>
+        <a href="index.html">Home</a>
+        <br/>
+    </nav>
     <h1>About Bipin Karki</h1>
     <p>My name is Bipin and I am from <strong>Nepal</strong> and currently I am doing masters in
         <strong>Compro</strong> at <strong>MIU</strong>.</p>
