--- a/index.html
+++ b/index.html
@@ -7,12 +7,19 @@
 </head>
 <body>
 <header>
-    <img src="images/bipin_karki.jpg" alt="bpn" height="250" width="200"/>
+    <img src="images/bipin_karki.jpg" alt="bpn" height="150" width="150"/>
     <h1>Bipin Karki</h1>
     <ul>
-        <li>W1L1 - This HomePage</li>
+        <li><a href="#">W1L1 - This HomePage</a></li>
         <li><a href="aboutme.html">W1L2 - About Me</a></li>
-        <li>W2 - AboutMe</li>
+        <li><a href="">W2L3 - Recipe</a></li>
+        <li><a href="">W2L4 - Movie Review</a></li>
+        <li><a href="">W2L5 - MP3 Library</a></li>
+        <li><a href="">W3L6</a></li>
+        <li><a href="">W4L7</a></li>
+        <li><a href="">W5L8</a></li>
+        <li><a href="">W6L9</a></li>
+        <li><a href="">W7L10</a></li>
     </ul>
 </header>
 <footer>
