WAP LAB-2 Recipes Homework restyle

--- a/recipe/index.html
+++ b/recipe/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <link rel="shortcut icon" type="image/jpg" href="images/pie_icon.gif"/>
     <title>Recipe</title>
-    <link href="style.css" rel="stylesheet"/>
+    <link href="recipe.css" rel="stylesheet"/>
 </head>
 <body>
 <div class="lemon-container">
@@ -122,7 +122,7 @@
 
 <footer class="footer-container">
     <div class="copyright">
-        <p>copy right &copy; 2012 Granny's Pies |</p>
+        <p>Copyright &copy; 2012 Granny's Pies |</p>
         <p>A Granny's Pies Production |</p>
         <p>All rights reserved |</p>
     </div>
