WAP LAB-2 Recipes Homework style

--- a/recipe/index.html
+++ b/recipe/index.html
@@ -106,8 +106,8 @@
         </div>
         <div class="comment-container">
             <p>
-                This site can really engage my interest. Follow the recipe above and
-                make it so! This pie is number one.
+                This site can really <strong>engage</strong> my interest. Follow the recipe above and
+                <strong>make</strong> it so! This pie is <strong>number one</strong>.
             </p>
             <p class="name-container">- Jean-Luc Piecard</p>
         </div>
