--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <ul>
         <li><a href="#">W1L1 - This HomePage</a></li>
         <li><a href="aboutme.html">W1L2 - About Me</a></li>
-        <li><a href="recipe/index.html">W2L3 - Recipe</a></li>
+        <li><a href="recipe/pie.html">W2L3 - Recipe</a></li>
         <li><a href="">W2L4 - Movie Review</a></li>
         <li><a href="">W2L5 - MP3 Library</a></li>
         <li><a href="">W3L6</a></li>
