--- a/aboutme.html
+++ b/aboutme.html
@@ -8,13 +8,16 @@
 <body>
 <header>
     <h1>About Bipin Karki</h1>
-    <p>My name is Bipin and I am from <strong>Nepal</strong> and currently I am doing masters in
+    <p class="has-dropcap">My name is Bipin and I am from <strong>Nepal</strong> and currently I am doing masters in
         <strong>Compro</strong> at <strong>MIU</strong>.</p>
 </header>
 <hr/>
 <section class="container">
     <div class="classes-container">
         <h2>My Classes This Quarter</h2>
+        <p class="has-dropcap">
+            I am taking DE courses now and some of them are as follows.
+        </p>
         <ul>
             <li>CS 422- Datbase Management Systesm(DBMS)</li>
             <li>CS 472 - Web Application Programming(WAP)</li>
@@ -24,9 +27,30 @@
     </div>
     <div class="movie-container">
         <h2>My Favorite Movies</h2>
+        <p class="has-dropcap">
+            I usually used to watch movies on my free time to refresh me, and some of them i really enjoyed are as
+            follows.
+        </p>
         <ol>
             <li>Game of Thrones (<a href="https://www.imdb.com/title/tt0944947/?ref_=nv_sr_srsg_0"
                                     target="_blank">IMDB</a>)
+                <dl>
+                    <dt class="sub-title">Creators</dt>
+                    <dd class="sub-details">David Benioff / D.B. Weiss</dd>
+                    <dt class="sub-title">Genre</dt>
+                    <dd class="sub-details">Action / Drama / Adventure</dd>
+                    <dt class="sub-title">Tagline</dt>
+                    <dd class="sub-details">When you play the game of thrones, you win or you die.
+                        (<a href="https://www.imdb.com/title/tt0944947/taglines?ref_=ttpl_ql_1"
+                            target="_blank">more</a>)
+                    </dd>
+                    <dt class="sub-title">Plot Outline</dt>
+                    <dd class="sub-details">Nine noble families fight for control over the lands of Westeros, while an
+                        ancient enemy returns after being dormant for millennia.
+                        (<a href="https://www.imdb.com/title/tt0944947/plotsummary?ref_=tttg_ql_2"
+                            target="_blank">more</a>)
+                    </dd>
+                </dl>
             </li>
             <li>Scam 1992: The Harshad Mehta Story (<a href="https://www.imdb.com/title/tt12392504/?ref_=nv_sr_srsg_0"
                                                        target="_blank">IMDB</a>)
