--- a/hw2/tmnt.html
+++ b/hw2/tmnt.html
@@ -242,24 +242,16 @@
             </dd>
         </dl>
     </div>
-
     <div class="footer">(1-10) of 88</div>
-
 </div>
 
 <div class="validator-container">
-    <a
-            href="https://validator.w3.org/nu/?doc=https://bipin21.github.io/aboutme.html" target="_blank"
-    >
+    <a href="https://validator.w3.org/nu/?doc=https://bipin21.github.io/hw2/tmnt.html" target="_blank">
         <img src="https://manalabs.org/img/w3c-html.png" alt="validator"/>
     </a>
-    <a
-            href=" http://jigsaw.w3.org/css-validator/validator?uri=https://bipin21.github.io/aboutme.html"
-            target="_blank"
-    >
+    <a href=" http://jigsaw.w3.org/css-validator/validator?uri=https://bipin21.github.io/hw2/tmnt.html" target="_blank">
         <img src="https://manalabs.org/img/w3c-css.png" alt="css validator"/>
     </a>
-
 </div>
 </body>
 </html>
