--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
         <li><a href="aboutme.html">W1L2 - About Me</a></li>
         <li><a href="recipe/pie.html">W2L3 - Recipe</a></li>
         <li><a href="hw2/tmnt.html">Homework 3 - Movie Review</a></li>
-        <li><a href="">W2L5 - MP3 Library</a></li>
+        <li><a href="responsive-design/index.html">Assignment 4: Responsive Design</a></li>
+        <li><a href="responsive-design/bootstrap-design/index.html">Assignment 4: Responsive Design with Bootstrap</a></li>
         <li><a href="">W3L6</a></li>
         <li><a href="">W4L7</a></li>
         <li><a href="">W5L8</a></li>
