--- a/responsive-design/bootstrap-design/index.html
+++ b/responsive-design/bootstrap-design/index.html
@@ -25,7 +25,7 @@
         <div class="column3 col-md-3 col-6">Column3</div>
     </div>
     <div class="footer p-1 text-center">
-        <p>Footer</p>
+        <p class="p-2">Footer</p>
     </div>
 </div>
 </body>
