--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <li><a href="hw2/tmnt.html">Homework 3 - Movie Review</a></li>
         <li><a href="responsive-design/index.html">Assignment 4: Responsive Design</a></li>
         <li><a href="responsive-design/bootstrap-design/index.html">Assignment 4: Responsive Design with Bootstrap</a></li>
-        <li><a href="">W3L6</a></li>
+        <li><a href="assignment5-js/index.html">Assignment 5: Javascript Functions</a></li>
         <li><a href="">W4L7</a></li>
         <li><a href="">W5L8</a></li>
         <li><a href="">W6L9</a></li>
