--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <li><a href="responsive-design/index.html">Assignment 4: Responsive Design</a></li>
         <li><a href="responsive-design/bootstrap-design/index.html">Assignment 4: Responsive Design with Bootstrap</a></li>
         <li><a href="assignment5-js/index.html">Assignment 5: Javascript Functions</a></li>
+        <li><a href="assignment6-prototypes/index.html">Assignment 6: Prototypes</a></li>
         <li><a href="">W4L7</a></li>
         <li><a href="">W5L8</a></li>
         <li><a href="">W6L9</a></li>
