assignment 6: prototypes,inheritance,object

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Bipin Karki</title>
-    <link href="style.css"  rel="stylesheet" />
+    <link href="style.css" rel="stylesheet"/>
 </head>
 <body>
 <header>
@@ -15,13 +15,14 @@
         <li><a href="recipe/pie.html">W2L3 - Recipe</a></li>
         <li><a href="hw2/tmnt.html">Homework 3 - Movie Review</a></li>
         <li><a href="responsive-design/index.html">Assignment 4: Responsive Design</a></li>
-        <li><a href="responsive-design/bootstrap-design/index.html">Assignment 4: Responsive Design with Bootstrap</a></li>
+        <li><a href="responsive-design/bootstrap-design/index.html">Assignment 4: Responsive Design with Bootstrap</a>
+        </li>
         <li><a href="assignment5-js/index.html">Assignment 5: Javascript Functions</a></li>
         <li><a href="assignment6-prototypes/index.html">Assignment 6: Prototypes</a></li>
-        <li><a href="">W4L7</a></li>
-        <li><a href="">W5L8</a></li>
-        <li><a href="">W6L9</a></li>
-        <li><a href="">W7L10</a></li>
+        <li><a href="">Assignment 7:</a></li>
+        <li><a href="">Assignment 8:</a></li>
+        <li><a href="">Assignment 9:</a></li>
+        <li><a href="">Assignment 10:</a></li>
     </ul>
 </header>
 <footer>
