assignment 6: prototypes,inheritance,object add salute call

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <li><a href="responsive-design/bootstrap-design/index.html">Assignment 4: Responsive Design with Bootstrap</a>
         </li>
         <li><a href="assignment5-js/index.html">Assignment 5: Javascript Functions</a></li>
-        <li><a href="assignment6-prototypes/index.html">Assignment 6: Prototypes</a></li>
+        <li><a href="assignment6-prototypes/index.html">Assignment Lesson 6: Scope, closures, and encapsulation</a></li>
         <li><a href="">Assignment 7:</a></li>
         <li><a href="">Assignment 8:</a></li>
         <li><a href="">Assignment 9:</a></li>
