--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </li>
         <li><a href="assignment5-js/index.html">Assignment 5: Javascript Functions</a></li>
         <li><a href="assignment6-prototypes/index.html">Assignment Lesson 6: Scope, closures, and encapsulation</a></li>
-        <li><a href="">Assignment 7:</a></li>
+        <li><a href="assignment7-ASCIIanimation">Assignment 7: ASCIIanimation</a></li>
         <li><a href="">Assignment 8:</a></li>
         <li><a href="">Assignment 9:</a></li>
         <li><a href="">Assignment 10:</a></li>
