assignment 7: asciianimation and map./filter/reduce

--- a/assignment7-ASCIIanimation/ascii.html
+++ b/assignment7-ASCIIanimation/ascii.html
@@ -54,7 +54,7 @@
        target="_blank">
         <img src="https://manalabs.org/img/w3c-css.png" alt="Valid CSS!"/></a
     ><br/>
-    <a href="http://mumstudents.org/jshint/check.php?uri=https://bipin21.github.io/assignment7-ASCIIanimation/ascii.html">
+    <a href="http://mumstudents.org/jshint/check.php?uri=https://bipin21.github.io/assignment7-ASCIIanimation/ascii.html" target="_blank">
         <img src="http://mumstudents.org/jscheck/jscheck-small.png" alt="JavaScript"/>
     </a>
 </div>
