--- a/assignment7-ASCIIanimation/ascii.html
+++ b/assignment7-ASCIIanimation/ascii.html
@@ -46,7 +46,7 @@
     </fieldset>
 </div>
 <div id="validate">
-    <a href="https://validator.w3.org/nu/ascii.html?doc=https://bipin21.github.io/assignment7-ASCIIanimation/ascii.html" target="_blank">
+    <a href="https://validator.w3.org/nu/?doc=https://bipin21.github.io/assignment7-ASCIIanimation/ascii.html" target="_blank">
         <img src="https://manalabs.org/img/w3c-html.png" alt="html validator"/>
     </a
     ><br/>
