--- a/assignment7-ASCIIanimation/ascii.html
+++ b/assignment7-ASCIIanimation/ascii.html
@@ -5,8 +5,8 @@
     <title>ASCIImation</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="ascii.css" type="text/css" rel="stylesheet">
-    <script src="animations.js" type="text/javascript"></script>
-    <script src="ascii.js" type="text/javascript"></script>
+    <script src="animations.js" rel="script"></script>
+    <script src="ascii.js" rel="script"></script>
 </head>
 
 <body>
