--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <li><a href="assignment7-ASCIIanimation/ascii.html">Assignment 7: ASCIIanimation</a></li>
         <li><a href="assignment7-map-filter-reduce/index.html">Assignment 7 (PART2): use of map/filter/reduce on lab
             5</a></li>
-        <li><a href="">Assignment 8:</a></li>
+        <li><a href="maze/maze.html">Assignment 8: Maze Game</a></li>
         <li><a href="">Assignment 9:</a></li>
         <li><a href="">Assignment 10:</a></li>
     </ul>
