assignment 9: jquery Task tracking project

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <li><a href="assignment7-map-filter-reduce/index.html">Assignment 7 (PART2): use of map/filter/reduce on lab
             5</a></li>
         <li><a href="maze/maze.html">Assignment 8: Maze Game</a></li>
-        <li><a href="">Assignment 9:</a></li>
+        <li><a href="tasks/tasks.html">Assignment 9: Task Tracking Project</a></li>
         <li><a href="">Assignment 10:</a></li>
     </ul>
 </header>
