assignment 9: jquery Task tracking project

--- a/tasks/tasks.html
+++ b/tasks/tasks.html
@@ -91,7 +91,7 @@
     /*Added event handlers*/
     $('#btnPrintObject').click(function () {
         var obj = $('form').toObject();
-        alert(JSON.stringify(obj));
+        // alert(JSON.stringify(obj));
         console.log(JSON.stringify(obj));
     });
     $('#loadObject').on('click', function () {
