assignment 10: Clean Screen Lab

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             5</a></li>
         <li><a href="maze/maze.html">Assignment 8: Maze Game</a></li>
         <li><a href="tasks/tasks.html">Assignment 9: Task Tracking Project</a></li>
-        <li><a href="">Assignment 10:</a></li>
+        <li><a href="clean-screen/index.html">Assignment 10: Clean Screen Lab</a></li>
     </ul>
 </header>
 <footer>
